cmake_minimum_required(VERSION 4.1)
project(New_Folder)

set(CMAKE_CXX_STANDARD 14)

add_executable(New_Folder
        Chapter1/ch1_ex_1_3_1_gross_pay.cpp
        Chapter1/ch1_ex_1_3_2_feet_to_inches.cpp
        Chapter1/ch1_ex_1_3_3_rewrite_c_to_cpp_io.cpp
        Chapter1/ch1_ex_1_6_2_card_class.cpp
        Chapter1/ch1_ex_1_6_3_queue_class.cpp
        Chapter1/ch1_ex_1_7_1_sroot_overload.cpp
        Chapter1/ch1_ex_1_7_3_min_overload.cpp
        Chapter1/ch1_ex_1_7_4_sleep_overload.cpp
        Chapter1/ch1_skill_1_8_3_power.cpp
        Chapter1/ch1_skill_1_8_4_revstr_overload.cpp
        Chapter2/ch2_cumulative_2_1_prompt.cpp
        Chapter2/ch2_cumulative_2_2_feet_to_inches_class.cpp
        Chapter2/ch2_cumulative_2_3_dice.cpp
        Chapter2/ch2_ex_2_1_1_queue_constructor.cpp
        Chapter2/ch2_ex_2_2_1_stack_dynamic.cpp
        Chapter2/ch2_ex_2_2_2_tandd.cpp
        Chapter2/ch2_ex_2_2_3_box.cpp
        Chapter2/ch2_ex_2_3_1_area_inheritance.cpp
        Chapter2/ch2_ex_2_6_1_stack_struct.cpp
        Chapter2/ch2_ex_2_6_2_union_swap_bytes.cpp
        Chapter2/ch2_ex_2_6_inline_abs.cpp
        Chapter2/ch2_ex_2_7_1_stack_auto_inline.cpp
        Chapter2/ch2_skill_2_7_2_strtype_inline.cpp
        Chapter2/ch2_skill_2_7_6_myclass_all_inline.cpp
        Chapter2/ch2_skill_line_class.cpp
        Chapter3/ch3_cumulative_3_2_getstring_friend.cpp
        Chapter3/ch3_cumulative_3_3_derived_assignment.cpp
        Chapter3/ch3_ex_3_2_1_showstack.cpp
        Chapter3/ch3_ex_3_3_1_who_return_object.cpp
        Chapter3/ch3_skill_3_3_light_function.cpp
        Chapter3/ch3_skill_loadstack_overload.cpp)
